[package]
name = "lioc"
version = "0.1.0"
authors = ["Chad Baxter <cbaxter@mail.umw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
http = "0.2.1"
log = "0.4.8"
regex = "1.3.9"